create github pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="header1 cid-rZbK8rlIrS" id="header16-0">
+<section class="engine"><a href="https://mobirise.info/f">easy site builder</a></section><section class="header1 cid-rZbK8rlIrS" id="header16-0">
 
     
 
@@ -69,7 +69,7 @@
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 59%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/ilhNvR-vUDI?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/438709565?autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
@@ -163,34 +163,34 @@
         <h3 class="mbr-section-title align-center mbr-fonts-style display-1"><strong>Alguns dos meus
 </strong><div><strong>resutados...</strong></div></h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5">Clique na imagem para ampliar.</h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#s2TomJ5OoJ">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#s4R0EBNXjW">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/1-420x236.png" alt="" data-slide-to="0" title="" data-target="#s2TomJ5b8s">
+                    <img class="w-100" src="assets/images/1-420x236.png" alt="" data-slide-to="0" title="" data-target="#s4R0EBNdMx">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/2-420x236.png" alt="" data-slide-to="1" title="" data-target="#s2TomJ5b8s">
+                    <img class="w-100" src="assets/images/2-420x236.png" alt="" data-slide-to="1" title="" data-target="#s4R0EBNdMx">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/3-420x236.png" alt="" data-slide-to="2" title="" data-target="#s2TomJ5b8s">
+                    <img class="w-100" src="assets/images/3-420x236.png" alt="" data-slide-to="2" title="" data-target="#s4R0EBNdMx">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/4-420x236.png" alt="" data-slide-to="3" title="" data-target="#s2TomJ5b8s">
+                    <img class="w-100" src="assets/images/4-420x236.png" alt="" data-slide-to="3" title="" data-target="#s4R0EBNdMx">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="s2TomJ5OoJ">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="s4R0EBNXjW">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="s2TomJ5b8s">
+                        <div class="carousel slide" data-ride="carousel" id="s4R0EBNdMx">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/1-420x236.png" alt="">
@@ -206,18 +206,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#s2TomJ5b8s"></li>
-                                <li data-slide-to="1" data-target="#s2TomJ5b8s"></li>
-                                <li data-slide-to="2" data-target="#s2TomJ5b8s"></li>
-                                <li data-slide-to="3" data-target="#s2TomJ5b8s"></li>
+                                <li data-slide-to="0" class="active" data-target="#s4R0EBNdMx"></li>
+                                <li data-slide-to="1" data-target="#s4R0EBNdMx"></li>
+                                <li data-slide-to="2" data-target="#s4R0EBNdMx"></li>
+                                <li data-slide-to="3" data-target="#s4R0EBNdMx"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#s2TomJ5b8s">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#s4R0EBNdMx">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#s2TomJ5b8s">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#s4R0EBNdMx">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
